spec: Make test 15 more precise

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -632,7 +632,7 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 
 \teststep{Der Nutzer hat das Programm geöffnet.}
 {Der Nutzer wählt über die Menü-Leiste die Öffnen-Funktion aus.}
-{Ein Öffnen-Dialog öffnet sich.}
+{Ein Öffnen-Dialog erscheint.}
 
 \teststep{Der Nutzer hat ein Prolog-Programm ausgewählt, welches das formatierte \texttt{simpsons.pl}-Programm aus dem Anhang enthält.}
 {Der Nutzer betätigt die Öffnen-Schaltfläche.}
@@ -647,8 +647,8 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 {Der Parser verarbeitet die Abfrage korrekt. Die Interpretation wird gestartet und eine Visualisierung angezeigt.}
 
 \teststep{Der Interpreter ist beim ersten Schritt der Interpretation der gegebenen Abfrage. Eine Visualisierung wird angezeigt.}
-{Der Nutzer betätigt die Schritt-Schaltfläche.}
-{Eine Lösung wurde gefunden. Es wird \texttt{yes.} ausgegeben.}
+{Der Nutzer betätigt die Schritt-Schaltfläche bis eine Lösung gefunden wird.}
+{Eine Lösung wurde gefunden. Es wird \texttt{yes.} in der Konsolein der Konsole ausgegeben.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
