spec: Add GUI draft containing the "format" button

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -917,6 +917,20 @@ Die Schaltflächen \enquote{Exportieren als Bild} und \enquote{Exportieren als T
 \enquote{Exportieren als Bild} lässt den Nutzer zwischen dem Export als SVG- oder PNG-Graphik wählen.
 \enquote{Exportieren als TikZ} lässt den Nutzer eine TeX-Datei mit einer Umsetzung des Graphen als TikZ-Graphik erstellen.
 
+\subsubsection{Formatierung eines Prolog-Programms}
+
+\begin{minipage}{\linewidth}
+\makebox[\linewidth]{
+\includegraphics[width=\linewidth]{build/gui/main_view_format_button.png}
+}
+\captionof{figure}{Programm nach dem Betätigen der \enquote{Formatieren}-Schaltflfäche}
+\end{minipage}
+
+Wenn der Nutzer die Schaltfläche \enquote{Formatieren} betätigt, versucht das Programm, das Prolog-Programm im Editor nach den vorgegegeben Regeln zu formatieren.
+Ist dies erfolgreich, wird eine Meldung auf der Konsole ausgegeben (2) und der Inhalt des Editors mit dem formatierten Prolog-Programm überschrieben (3).
+
+Schlägt die Formatierung fehl, wird eine Fehlermeldung auf der Konsole ausgegeben.
+
 \subsection{Visualisierung}
 
 Um die Visualisierungsbeispiele besser darzustellen zu können, wurden sie hier ohne die graphische Oberfläche des Programms eingefügt.
