--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -30,8 +30,8 @@
 \usepackage{courier}
 \hypersetup{
 	pdftitle={Pflichtenheft},
-	bookmarks=true,
 }
+
 \usepackage{csquotes}
 
 \newcommand\urlpart[2]{$\underbrace{\text{\texttt{#1}}}_{\text{#2}}$}
@@ -40,9 +40,15 @@
 
 \lstset{basicstyle=\ttfamily,breaklines=true}
 
+% Don't strech across whole page
+\raggedbottom
+
+% Start new page with each section
+\usepackage{sectsty}
+\sectionfont{\clearpage}
+
 \begin{document}
 \maketitle
-\newpage
 
 \section{Einleitung}
 
@@ -103,7 +109,6 @@ Dank des automatisch generierten Graphen ist es dem Nutzer hierbei möglich, die
 
 Damit soll dem Nutzer die Funktionsweise von Prolog-Programmen durch die graphische Visualisierung näher gebracht und zum verbesserten Verständnis von Prolog beigetragen werden.
 
-\pagebreak
 \section{Kriterien}
 % Diese Section sollte kurz und knapp "für Manager" sein
 % und auf eine Seite passen.
@@ -236,7 +241,6 @@ Das Programm beschränkt sich auf eine graphische Darstellung über GUI-Elemente
 
 Das Programm ist nicht für professionelle Anwendungszwecke ausgelegt.
 
-\pagebreak
 %%%%%%%%%%%%%%
 \section{Produkteinsatz}
 
@@ -266,7 +270,9 @@ Eine Installation des Java Runtime Environments Version 8 aufwärts ist auf dem 
 \section{Produktdaten}
 
 \textbf{Zuletzt geöffnete Dateien} \\
-Die Pfade der fünf zuletzt geöffneten Dateien werden für einen Eintrag in der Menüleiste gespeichert. Außer den oben genannten werden keinerlei Daten gespeichert.
+Die Pfade der fünf zuletzt geöffneten Dateien werden für einen Eintrag in der Menüleiste gespeichert.
+
+Außer den oben genannten werden keinerlei Daten gespeichert.
 %%%%%%%%%%%
 \section{Funktionale Anforderungen}
 
@@ -383,7 +389,6 @@ Eine automatische Formatierung von Prolog-Quellcode ist über eine Schaltfläche
 Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werden.
 
 %%%%%%%%%%%
-\newpage
 \section{Nicht-Funktionale Anforderungen}
 
 \nonFunctionality{Das Programm startet auf einem modernen System innerhalb von 30 Sekunden und ist voll einsatzbereit.}{nfc:startup}
@@ -402,7 +407,6 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 
 \nonFunctionality{Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, um weitere Sprachfeatures zu unterstützen.}{nfc:extendable}
 
-\pagebreak
 \section{Tests}
 
 \test{Öffnen einer Prolog-Programmdatei}{tst:open}
@@ -582,7 +586,6 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newpage
 \section{Systemtests}
 
 \test{Erstellung, Bearbeitung, Speichern und Parsen des simpsons.pl-Programms}{tst:sys1}
@@ -730,7 +733,6 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 {Die gesamte Visualisierung wird als LaTeX-Quellcode exportiert.}
 
 %%%%%%%%%%%%%
-\pagebreak
 \appendix
 
 \section{GUI-Entwürfe}
@@ -1084,7 +1086,6 @@ Fenster zur Meldung einer Nachricht (Warnungs- oder Fehler-Dialog) oder Anfrage 
 \textbf{Formatierung}:
 Vorgegebener Stil bzgl. der Setzung von Leerzeichen und Umbrüchen. Zu unterscheiden von Syntax, da Formatierung keinen Einfluss auf die Validität des Programms hat.
 
-\newpage
 \section{Anhang}
 
 \subsection{Formatiertes simpsons.pl Beispielprogramm}
