--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -192,9 +192,9 @@ Das Programm soll Listen bei der Ausgabe einheitlich auf \enquote{\texttt{[x,y,z
 
 Das Programm soll Quelltext durch das Betätigen der \enquote{Formatieren}-Schaltfläche in ein \hyperref[format]{vorgeschriebenes Format} bringen können.
 
-\criterium{Wechseln der Sprache zwischen Deutsch und Englisch}{crt:translation}
+\criteriumOptional{Wechseln der Sprache zwischen Deutsch und Englisch}{crt:translation}
 
-Die Programmobefläche soll die Sprachen Deutsch und Englisch unterstützen.
+Die Programmoberfläche soll die Sprachen Deutsch und Englisch unterstützen.
 
 \subsection{Abgrenzung}
 
@@ -269,7 +269,6 @@ Das Programm bietet einen Schnellzugriff auf bis zu fünf der zuletzt verwendete
 
 \functionality{Bearbeiten eines Prolog-Programms}{fnc:editor}
 \fulfills{crt:edit}
-\fulfills{crt:syntaxhighlighting}
 
 Das Prolog-Programm kann im Editor bearbeitet werden. Die Änderungen werden erst beim Speichern zurückgeschrieben.
 
