spec: Add comma in M3

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -117,7 +117,7 @@ Das Programm kann bereits vorhandene Prolog-Programme öffnen.
 
 \criterium{Bearbeiten eines Prolog-Programms}{crt:edit}
 
-Das Programm erlaubt es dem Nutzer Änderungen an einem geöffneten Prolog-Programm durchzuführen. Dabei wird die aktuelle Interpretation gestoppt und die Visualisierung gelöscht.
+Das Programm erlaubt es dem Nutzer, Änderungen an einem geöffneten Prolog-Programm durchzuführen. Dabei wird die aktuelle Interpretation gestoppt und die Visualisierung gelöscht.
 
 \criterium{Speichern eines Prolog-Programms}{crt:save}
 
