spec: Small fixes to tests

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -433,7 +433,7 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 \test{Öffnen einer Prolog-Programmdatei während im Editor bereits ein Programm eingegeben wurde mit Speichern des geschriebenen Programmes}{tst:openanother}
 \tests{fnc:open}
 
-\teststep{Das Programm wird ausgeführt und ist fokussiert. Im Editor wurde ein Prolog-Programm händisch eingegeben.}
+\teststep{Das Programm wird ausgeführt und ist fokussiert. Im Editor wurde ein Prolog-Programm von Hand eingegeben.}
 {Der Nutzer wählt über die Menüleiste die Öffnen-Funktion aus.}
 {Ein Datei-Auswahldialog öffnet sich.}
 
@@ -548,7 +548,7 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 
 \teststep{Ein Datei-Speichern-Dialog ist geöffnet.}
 {Der Nutzer wählt einen Dateipfad aus und gibt einen Dateinamen ein. Anschließend betätigt er die Speichern-Schaltfläche.}
-{Die Visualisierung wird im ausgewählten Format an dem gewählten Ort gespeichert. Die passende \texttt{.svg} bzw. \texttt{.png} Dateieendung wird wenn nötig ergänzt.}
+{Die Visualisierung wird im ausgewählten Format an dem gewählten Ort gespeichert. Die passende \texttt{.svg} bzw. \texttt{.png} Dateieendung wird, wenn nötig, ergänzt.}
 
 \test{Export als LaTeX für Foliensätze}{tst:latexexporttikz}
 \tests{fnc:latexexport}
@@ -558,7 +558,7 @@ Der Prolog-Interpreter lässt sich in seiner Funktionalität einfach erweitern, 
 {Ein Auswahl-Dialog öffnet sich.}
 
 \teststep{Ein Dialog mit den Auswahlmöglichkeiten Grafik (\enquote{SVG}, \enquote{PNG}) und LaTeX ist geöffnet.}
-{Der Nutzer wählt die LaTeX Option aus. Anschließend betätigt er die Speichern-Schaltfläche.}
+{Der Nutzer wählt die LaTeX-Option aus. Anschließend betätigt er die Speichern-Schaltfläche.}
 {Ein Datei-Speichern-Dialog öffnet sich.}
 
 \teststep{Ein Datei-Speichern-Dialog ist geöffnet.}
