spec: Resize image of graph root

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -925,7 +925,7 @@ Die visualisierte Abfrage ist \texttt{grandfather(X, Y)} im Beispielprogramm.
 
 \begin{minipage}{\linewidth}
 \makebox[\linewidth]{
-\includegraphics[width=\linewidth]{build/visualisation/01_root.png}
+\includegraphics[width=0.7\linewidth]{build/visualisation/01_root.png}
 }
 \captionof{figure}{Wurzel des Visualisierungsbaumes}
 \end{minipage}
