spec: Use same term for implemented Prolog subset

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -1017,7 +1017,7 @@ Das vorgestellte VIPER-Programm. Dies ist zu unterscheiden von Prolog-Programmen
 \textbf{Prolog-Programm}:
 Prolog-Quelltext in Form von Dateien auf einem Speichermedium. Dies ist zu unterscheiden von dem Programm im Sinne des VIPER-Programms.
 
-\textbf{Prolog-Teilsprache}:
+\textbf{Prolog-Teilmenge}:
 Es gibt Identifier, Variablen und Zahlen die wie folgt notiert werden:
 
 \begin{lstlisting}
